feat: added html validator

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
           laudantium.
         </article>
       </section>
+
+      <section>
+        <p>
+          <a href="https://validator.w3.org/check?url=yourWebsiteURL">
+            <img
+              src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
+              alt="Validate"
+            />
+          </a>
+        </p>
+      </section>
     </main>
 
     <footer>&#169;2024</footer>
