fix: added site url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
       <section>
         <p>
-          <a href="https://validator.w3.org/check?url=yourWebsiteURL">
+          <a
+            href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/"
+          >
             <img
               src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
               alt="Validate"
