feat: initial completion of profile page for lab 1

--- a/index.html
+++ b/index.html
@@ -1,67 +1,53 @@
 <!DOCTYPE html>
-<html lang="kor">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DAJA</title>
     <link
       rel="shortcut icon"
       href="https://www.cdnlogo.com/logos/s/71/shell-gasoline.svg"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="css/general.css" />
   </head>
   <body>
-    <header>
-      <h1>Lmao</h1>
-      <hr />
-    </header>
+    <main class="main-content">
+      <div class="img-container">
+        <img
+          src="./assets/images/wallpaper.jpg"
+          alt="Cover"
+          class="img-cover"
+        />
+        <img
+          src="./assets/images/avatar.jpeg"
+          alt="Avatar"
+          class="img-avatar"
+        />
+      </div>
 
-    <main>
-      <section>
-        <a href="./about.html">Click</a>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eos
-          pariatur quae velit, voluptatem blanditiis. Eius hic veniam sed
-          aperiam, ducimus laboriosam. In maiores quisquam consequuntur,
-          molestiae consectetur, nihil omnis officia autem accusantium iure
-          aliquam soluta impedit eos. Quasi optio dolor dolorem aspernatur
-          recusandae porro fugiat, hic quisquam, deleniti maxime rerum commodi
-          similique mollitia veritatis deserunt? Aliquam quos ea incidunt
-          tempore, nam dolores magni est hic temporibus, inventore doloremque.
-          Alias exercitationem et repellat explicabo dolores, provident quidem
-          harum atque eveniet, architecto dignissimos obcaecati ex dolore
-          voluptatum dolorem labore accusantium perspiciatis! Aliquam voluptatem
-          ab velit eligendi debitis ipsam voluptate laboriosam qui.
-        </article>
-      </section>
+      <div class="profile-content">
+        <section>
+          <h1>Dann Anthony Jimenez Astillero</h1>
 
-      <hr />
-
-      <section>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cumque,
-          impedit deserunt velit dicta enim aperiam doloremque nemo eos iusto
-          sint sed suscipit sapiente, quidem itaque harum vel, minus quisquam
-          temporibus rem placeat laborum? Eveniet harum beatae mollitia a cumque
-          neque facilis. Iste sint est voluptatum excepturi ratione similique
-          laudantium.
-        </article>
-      </section>
-
-      <section>
-        <p>
-          <a
-            href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/"
-          >
-            <img
-              src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
-              alt="Validate"
-            />
-          </a>
-        </p>
-      </section>
+          <ul class="assignment-list">
+            <li>W1D1 - Home Page</li>
+          </ul>
+        </section>
+      </div>
     </main>
 
-    <footer>&#169;2024</footer>
+    <footer>
+      <div>
+        <a
+          href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/"
+        >
+          <img
+            src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
+            alt="Validate"
+          />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
