--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
     <main class="main-content">
-      <div class="img-container">
-        <img
-          src="./assets/images/wallpaper.jpg"
-          alt="Cover"
-          class="img-cover"
-        />
-        <img
-          src="./assets/images/avatar.jpeg"
-          alt="Avatar"
-          class="img-avatar"
-        />
-      </div>
+      <div class="container home-container">
+        <div class="img-container">
+          <img
+            src="./assets/images/wallpaper.jpg"
+            alt="Cover"
+            class="img-cover"
+          />
 
-      <div class="profile-content">
-        <section>
-          <h1>Dann Anthony Jimenez Astillero</h1>
+          <div class="img-avatar-container">
+            <img
+              src="./assets/images/avatar.jpeg"
+              alt="Avatar"
+              class="img-avatar"
+            />
+          </div>
+        </div>
 
-          <ul class="assignment-list">
-            <li>W1D1 - Home Page</li>
-          </ul>
-        </section>
+        <div class="profile-content">
+          <section>
+            <h1>Dann Anthony Jimenez Astillero</h1>
+
+            <ul class="assignment-list">
+              <li>W1D1 - Home Page</li>
+            </ul>
+          </section>
+        </div>
       </div>
     </main>
 
