--- a/about.html
+++ b/about.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/styleMe.css" />
     <script defer src="./js/aboutMe.js"></script>
+    <script
+      type="text/javascript"
+      async
+      src="https://tenor.com/embed.js"
+    ></script>
   </head>
   <body>
     <main class="container">
@@ -14,7 +19,7 @@
         <h1>About DAJA</h1>
 
         <p>
-          Hello! I'm Dann Anthony Astillero, currently a
+          Hello! I'm Dann Anthony Jimenez Astillero, currently a
           <strong>Full Stack Developer (MERN)</strong> with a robust background
           in both front-end and back-end development. My journey in the tech
           industry has led me through various roles, where I've honed my skills
@@ -185,36 +190,132 @@
         <div id="moods" class="tab-content">
           <div class="mood-list">
             <div class="mood">
-              <h3>Stressed</h3>
-
-              <iframe
-                src="https://giphy.com/embed/1FMaabePDEfgk"
-                width="420"
-                height="444"
-                frameborder="0"
-                class="giphy-embed"
-              ></iframe>
+              <div
+                class="tenor-gif-embed"
+                data-postid="19020573"
+                data-share-method="host"
+                data-aspect-ratio="0.65625"
+                data-width="100%"
+              >
+                <a href="https://tenor.com/view/roy-mustang-fma-gif-19020573"
+                  >Roy Mustang Fma GIF</a
+                >from
+                <a href="https://tenor.com/search/roy+mustang-gifs"
+                  >Roy Mustang GIFs</a
+                >
+              </div>
+              <script
+                type="text/javascript"
+                async
+                src="https://tenor.com/embed.js"
+              ></script>
             </div>
 
             <div class="mood">
-              <h3>Focused</h3>
+              <div
+                class="tenor-gif-embed"
+                data-postid="27497905"
+                data-share-method="host"
+                data-aspect-ratio="1.35593"
+                data-width="100%"
+              >
+                <a
+                  href="https://tenor.com/view/horrid-tired-meme-spongebob-dying-gif-27497905"
+                  >Horrid Tired GIF</a
+                >from
+                <a href="https://tenor.com/search/horrid-gifs">Horrid GIFs</a>
+              </div>
 
-              <iframe
-                src="https://giphy.com/embed/7MDZS8zS1ixtJAUEul"
-                width="420"
-                height="444"
-                frameborder="0"
-                class="giphy-embed"
-              ></iframe>
+              <div
+                class="tenor-gif-embed"
+                data-postid="27299608"
+                data-share-method="host"
+                data-aspect-ratio="1.42857"
+                data-width="100%"
+              >
+                <a href="https://tenor.com/view/%E7%9A%849-gif-27299608"
+                  >的9 GIF</a
+                >from
+                <a href="https://tenor.com/search/%E7%9A%849-gifs">的9 GIFs</a>
+              </div>
+              <script
+                type="text/javascript"
+                async
+                src="https://tenor.com/embed.js"
+              ></script>
+            </div>
+
+            <div class="mood">
+              <div
+                class="tenor-gif-embed"
+                data-postid="8109718"
+                data-share-method="host"
+                data-aspect-ratio="1.3388"
+                data-width="100%"
+              >
+                <a
+                  href="https://tenor.com/view/inspector-gadget-cartoon-hmm-thinking-gif-8109718"
+                  >Inspector Gadget GIF</a
+                >from
+                <a href="https://tenor.com/search/inspector+gadget-gifs"
+                  >Inspector Gadget GIFs</a
+                >
+              </div>
+
+              <div
+                class="tenor-gif-embed"
+                data-postid="21880268"
+                data-share-method="host"
+                data-aspect-ratio="1.32231"
+                data-width="100%"
+              >
+                <a
+                  href="https://tenor.com/view/squirtle-squad-drink-pokemon-squirtle-nod-gif-21880268"
+                  >Squirtle Squad Drink GIF</a
+                >from
+                <a href="https://tenor.com/search/squirtle+squad-gifs"
+                  >Squirtle Squad GIFs</a
+                >
+              </div>
+            </div>
+
+            <div class="mood">
+              <div
+                class="tenor-gif-embed"
+                data-postid="15161644"
+                data-share-method="host"
+                data-aspect-ratio="0.73125"
+                data-width="100%"
+              >
+                <a
+                  href="https://tenor.com/view/inspekthor-disgusting-terrible-horrible-make-face-gif-15161644"
+                  >Inspekthor Disgusting GIF</a
+                >from
+                <a href="https://tenor.com/search/inspekthor-gifs"
+                  >Inspekthor GIFs</a
+                >
+              </div>
             </div>
           </div>
         </div>
 
         <div id="neighbor" class="tab-content">
-          <ul>
-            <li>Also from the Philippines (Same as me)</li>
-            <li>Genius</li>
-          </ul>
+          <div class="neighbor-details">
+            <img src="./assets/images/neighbor.jpg" alt="Neighbor" />
+
+            <div class="facts-content">
+              <h3>Marc Lennard Colina</h3>
+
+              <ul>
+                <li>From the Philippines (Same as me)</li>
+                <li>4.5 years of work experience</li>
+                <li>Java Lord</li>
+                <li>Genius</li>
+                <li>Athletic</li>
+                <li>TM Practitioner</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
     </main>
