--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
             <ul class="assignment-list">
               <li>W1D1 - Home Page</li>
+              <li>W1D2 - About Me Page</li>
             </ul>
           </section>
         </div>
