feat: initial completion

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/general.css" />
+    <link rel="stylesheet" href="../css/general.css" />
     <link rel="stylesheet" href="./css/styleMe.css" />
     <script defer src="./js/aboutMe.js"></script>
     <script
@@ -15,6 +15,8 @@
   </head>
   <body>
     <main class="container">
+      <a href="./index.html" class="btn-back">Back</a>
+
       <section class="section-introduction">
         <h1>About DAJA</h1>
 
@@ -99,7 +101,7 @@
             <div class="card">
               <figure>
                 <img
-                  src="./assets/images/movie-harry-potter.jpg"
+                  src="../assets/images/movie-harry-potter.jpg"
                   alt="Harry Potter"
                 />
               </figure>
@@ -120,7 +122,7 @@
             <div class="card">
               <figure>
                 <img
-                  src="./assets/images/movie-lord-of-the-rings.jpg"
+                  src="../assets/images/movie-lord-of-the-rings.jpg"
                   alt="Lord of the Rings"
                 />
               </figure>
@@ -141,7 +143,7 @@
             <div class="card">
               <figure>
                 <img
-                  src="./assets/images/movie-fast-and-furious.jpg"
+                  src="../assets/images/movie-fast-and-furious.jpg"
                   alt="Fast and Furious"
                 />
               </figure>
@@ -163,7 +165,7 @@
             <div class="card">
               <figure>
                 <img
-                  src="./assets/images/movie-rush-hour.jpg"
+                  src="../assets/images/movie-rush-hour.jpg"
                   alt="Rush Hour"
                 />
               </figure>
@@ -307,7 +309,7 @@
               <h3>Marc Lennard Colina</h3>
 
               <ul>
-                <li>From the Philippines (Same as me)</li>
+                <li>From the Philippines (same as me)</li>
                 <li>4.5 years of work experience</li>
                 <li>Java Lord</li>
                 <li>Genius</li>
@@ -320,4 +322,26 @@
       </section>
     </main>
   </body>
+
+  <footer>
+    <div class="validator-container">
+      <a
+        href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/"
+      >
+        <img
+          src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
+          alt="Validate"
+        />
+      </a>
+
+      <a
+        href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/"
+      >
+        <img
+          src="https://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Validate"
+        />
+      </a>
+    </div>
+  </footer>
 </html>
