--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
             <h1>Dann Anthony Jimenez Astillero</h1>
 
             <ul class="assignment-list">
-              <li>W1D1 - Home Page</li>
-              <li>W1D2 - About Me Page</li>
+              <li>
+                <a href="#"><strong>W1D1</strong> - Home Page</a>
+              </li>
+              <li>
+                <a href="./lab2/about.html"
+                  ><strong>W1D2</strong> - About Me Page</a
+                >
+              </li>
             </ul>
           </section>
         </div>
@@ -45,12 +51,21 @@
     </main>
 
     <footer>
-      <div>
+      <div class="validator-container">
         <a
           href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/"
         >
           <img
             src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
+            alt="Validate"
+          />
+        </a>
+
+        <a
+          href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/"
+        >
+          <img
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
             alt="Validate"
           />
         </a>
