wip: on-going bug fixing

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main class="container">
-      <a href="./index.html" class="btn-back">Back</a>
+      <a href="../index.html" class="btn-back">Back</a>
 
       <section class="section-introduction">
         <h1>About DAJA</h1>
