feat: initial completion

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -303,7 +303,7 @@
 
         <div id="neighbor" class="tab-content">
           <div class="neighbor-details">
-            <img src="./assets/images/neighbor.jpg" alt="Neighbor" />
+            <img src="../assets/images/neighbor.jpg" alt="Neighbor" />
 
             <div class="facts-content">
               <h3>Marc Lennard Colina</h3>
