--- a/lab2/about.html
+++ b/lab2/about.html
@@ -108,7 +108,16 @@
 
               <div class="card-body">
                 <h2 class="card-title">Harry Potter</h2>
-                <div class="imdb-rating">7.6/10 ★</div>
+
+                <div class="info-container">
+                  <div class="imdb-rating">7.6/10 ★</div>
+
+                  <dl>
+                    <dt>Genre:</dt>
+                    <dd>Action / Fantasy</dd>
+                  </dl>
+                </div>
+
                 <p>
                   Harry Potter is a series of seven fantasy novels written by
                   British author J. K. Rowling. The novels chronicle the lives
@@ -129,7 +138,16 @@
 
               <div class="card-body">
                 <h2 class="card-title">Lord of the Rings</h2>
-                <div class="imdb-rating">8.7/10 ★</div>
+
+                <div class="info-container">
+                  <div class="imdb-rating">8.7/10 ★</div>
+
+                  <dl>
+                    <dt>Genre:</dt>
+                    <dd>Fantasy Fiction</dd>
+                  </dl>
+                </div>
+
                 <p>
                   The Lord of the Rings is a trilogy of epic fantasy adventure
                   films directed by Peter Jackson, based on the novel The Lord
@@ -150,7 +168,16 @@
 
               <div class="card-body">
                 <h2 class="card-title">Fast and Furious</h2>
-                <div class="imdb-rating">6.5/10 ★</div>
+
+                <div class="info-container">
+                  <div class="imdb-rating">6.5/10 ★</div>
+
+                  <dl>
+                    <dt>Genre:</dt>
+                    <dd>Action / Crime Film</dd>
+                  </dl>
+                </div>
+
                 <p>
                   Fast & Furious, also known as The Fast and the Furious, is an
                   American media franchise centered on a series of action films
@@ -172,7 +199,16 @@
 
               <div class="card-body">
                 <h2 class="card-title">Rush Hour</h2>
-                <div class="imdb-rating">7/10 ★</div>
+
+                <div class="info-container">
+                  <div class="imdb-rating">7/10 ★</div>
+
+                  <dl>
+                    <dt>Genre:</dt>
+                    <dd>Action / Comedy</dd>
+                  </dl>
+                </div>
+
                 <p>
                   When a Chinese diplomat's daughter is kidnapped in Los
                   Angeles, he calls in Hong Kong Detective Inspector Lee (Jackie
