fix: css callouts

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -362,7 +362,7 @@
   <footer>
     <div class="validator-container">
       <a
-        href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/"
+        href="https://validator.w3.org/check?url=https://thisisdajaaa.github.io/miu-wap-track/lab2/about.html"
       >
         <img
           src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"
@@ -371,7 +371,7 @@
       </a>
 
       <a
-        href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/"
+        href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/lab2/about.html"
       >
         <img
           src="https://jigsaw.w3.org/css-validator/images/vcss"
