refactor: removed unnecessary script tags

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="../css/general.css" />
     <link rel="stylesheet" href="./css/styleMe.css" />
     <script defer src="./js/aboutMe.js"></script>
-    <script
-      type="text/javascript"
-      async
-      src="https://tenor.com/embed.js"
-    ></script>
+    <script async src="https://tenor.com/embed.js"></script>
   </head>
   <body>
     <main class="container">
@@ -242,11 +238,6 @@
                   >Roy Mustang GIFs</a
                 >
               </div>
-              <script
-                type="text/javascript"
-                async
-                src="https://tenor.com/embed.js"
-              ></script>
             </div>
 
             <div class="mood">
@@ -276,11 +267,6 @@
                 >from
                 <a href="https://tenor.com/search/%E7%9A%849-gifs">的9 GIFs</a>
               </div>
-              <script
-                type="text/javascript"
-                async
-                src="https://tenor.com/embed.js"
-              ></script>
             </div>
 
             <div class="mood">
