feat: initial commit of lab3

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About me</title>
     <link rel="stylesheet" href="../css/general.css" />
     <link rel="stylesheet" href="./css/styleMe.css" />
     <script defer src="./js/aboutMe.js"></script>
