feat: initial completion of login screen

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                   ><strong>W1D2</strong> - About Me Page</a
                 >
               </li>
+              <li>
+                <a href="./lab3/login.html"
+                  ><strong>W1D3</strong> - Login Page</a
+                >
+              </li>
             </ul>
           </section>
         </div>
