feat: added bootstrap demo page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
               </li>
               <li>
                 <a href="./lab3/login.html"
-                  ><strong>W1D3</strong> - Login Page</a
+                  ><strong>W1D3 Part 1</strong> - Login Page</a
+                >
+              </li>
+              <li>
+                <a href="./lab3/bootstrap.html"
+                  ><strong>W1D3 Part 2</strong> - Bootstrap Demo Page</a
                 >
               </li>
             </ul>
