--- a/lab2/about.html
+++ b/lab2/about.html
@@ -356,7 +356,7 @@
         </a>
 
         <a
-          href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/lab2/about.html"
+          href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/lab2/css/styleMe.css"
         >
           <img
             src="https://jigsaw.w3.org/css-validator/images/vcss"
