--- a/lab3/login.html
+++ b/lab3/login.html
@@ -51,23 +51,27 @@
 
             <form>
               <div class="field-container">
-                <label for="identifier">Username or Email</label>
+                <label for="identifier" class="field-label field-label-primary"
+                  >Username or Email</label
+                >
                 <input
                   id="identifier"
                   type="text"
                   placeholder="Enter email"
-                  class="form-input"
+                  class="form-input form-input-primary"
                   required
                 />
               </div>
 
               <div class="field-container">
-                <label for="password">Password</label>
+                <label for="identifier" class="field-label field-label-primary"
+                  >Password</label
+                >
                 <input
                   id="password"
                   type="password"
                   placeholder="Enter password"
-                  class="form-input"
+                  class="form-input form-input-primary"
                   required
                 />
               </div>
@@ -75,7 +79,9 @@
               <div class="login-actions-container">
                 <div class="field-checkbox-container">
                   <input type="checkbox" id="remember" value="isRemembered" />
-                  <label for="remember">Remember me</label>
+                  <label for="remember" class="field-label-primary"
+                    >Remember me</label
+                  >
                 </div>
 
                 <a href="../index.html">Forgot password?</a>
@@ -116,7 +122,7 @@
         </a>
 
         <a
-          href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/lab3/login.html"
+          href="https://jigsaw.w3.org/css-validator/validator?uri=https://thisisdajaaa.github.io/miu-wap-track/lab3/css/login.css"
         >
           <img
             src="https://jigsaw.w3.org/css-validator/images/vcss"
