feat: initial completion

--- a/lab4/webformOne.html
+++ b/lab4/webformOne.html
@@ -34,7 +34,7 @@
                 type="text"
                 placeholder="Enter Website URL"
                 class="form-input form-input-secondary"
-                pattern="(http:https):/\/\"
+                pattern="https?:\/\/[^\/]+"
                 required
               />
             </div>
