feat: added link values to the nav links

--- a/lab4/webformTwo.html
+++ b/lab4/webformTwo.html
@@ -15,8 +15,8 @@
           >
 
           <div class="nav-links">
-            <a href="" class="link-products">Products</a>
-            <a href="">Suppliers</a>
+            <a href="../index.html" class="link-products">Products</a>
+            <a href="../index.html">Suppliers</a>
           </div>
         </div>
 
