--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <script src="./js/part1.js"></script> -->
-    <script src="./js/part2.js"></script>
+    <!-- <script src="./js/question1.js"></script> -->
+    <script src="./js/question2.js"></script>
   </head>
   <body></body>
 </html>
