--- a/lab7/index.html
+++ b/lab7/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./js/question1.js"></script>
-    <!-- <script src="./js/question2.js"></script> -->
+    <script src="./js/question2.js"></script>
   </head>
   <body></body>
 </html>
