feat: initial completion

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                   ><strong>W1D4</strong> - Form Page</a
                 >
               </li>
+              <li>
+                <a href="./lab10/hcmc-website/index.html"
+                  ><strong>W1D5</strong> - Patients Page</a
+                >
+              </li>
             </ul>
           </section>
         </div>
